1/28/16 - 0.8.1 - Added Slack support for notifications, fix for Pushbullet, other minor changes.
8/25/16 - 0.8.0 - Added preliminary music with Headphones support, plus numerous minor changes.
3/15/16 - 0.7.5 - Added ability to toggle between alternative input menu and default device (use if menus options don't appear)
3/14/16 - 0.7.4 - Added ability to manage CouchPotato in channel
3/09/16 - 0.7.3 - Added Dutch translation by Ruvetuve
3/05/16 - 0.7.2 - Added support for search results in different languages using TMDB and TVDB. Fix for weekly limits in some clients
3/02/16 - 0.7.1 - Added French localization. Translation done by seb972.
2/28/16 - 0.7.0 - Users can view and delete their own requests.
2/27/16 - 0.6.9 - Added support for reporting problems with specific media files with ability to navigate through library.
2/21/16 - 0.6.8b - Fixed bugs when upgrading from old versions and DumbTools.
2/19/16 - 0.6.8 - Use unique sessions for each login. Option to check admin user using plex.tv. Add Season Folder option to Sonarr.
2/17/16 - 0.6.7 - Add preliminary SickRage support. Ability to rename users.
2/16/16 - 0.6.6 - Fixed sending to Couchpotato when using TMDB. Also added posters when confirming request in Plex Web
2/15/16 - 0.6.5 - Fixes for managing users. More specific user information displayed and cosmetic improvements.
2/13/16 - 0.6.4 - Manage Sickbeard shows in the Channel, allowing for manually selecting of seasons and episodes
2/12/16 - 0.6.3 - Added rudimentary ability for users to notify admin user of problems. The issue will be sent to admin through notifications only. More features added to this in the future.
2/12/16 - 0.6.2 - Added ability to view changelog in the Plex Channel. Find under 'Manage Channel'.
2/11/16 - 0.6.1 - Changelog added. Version information will be added here. Added a ability to manage sonarr from the channel.